--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Arthur C. W. da Cunha
-# description: My personal website
-logo: /assets/mypic.jpg
+title: Mikael Møller Høgsgaard
+logo: 
 show_downloads: false
 github: false
 theme: jekyll-theme-minimal
