--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Mikael Møller Høgsgaard
 # description: My personal website
-logo: untitled.png
+logo: Untitled.png
 show_downloads: false
 github: false
 theme: jekyll-theme-minimal
