--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,6 @@
-description: Mikael Møller Høgsgaard \ PhD Student \ Aarhus University \ hogsgaard@cs.au.dk 
+description: Mikael Møller Høgsgaard  PhD Student Aarhus University  hogsgaard@cs.au.dk 
 Aarhus University 
 logo: Untitled.png
 show_downloads: false
 github: false
 theme: jekyll-theme-minimal
-# logo: Untitled.png
-# title: Mikael Møller Høgsgaard
-# show_downloads: false
-# github: false
-# theme: jekyll-theme-minimal
