--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 description: Mikael Møller Høgsgaard  PhD Student Aarhus University  hogsgaard@cs.au.dk 
 Aarhus University 
 logo: Untitled.png
+title: Mikael
 show_downloads: false
 github: false
 theme: jekyll-theme-minimal
