--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
-description: Mikael Møller Høgsgaard \\ PhD Student Aarhus University \\ hogsgaard@cs.au.dk  
+description: |
+  Mikael Møller Høgsgaard \\
+  PhD Student Aarhus University \\
+  hogsgaard@cs.au.dk
 logo: Untitled.png
 show_downloads: false
 github: false
