--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ description: |
   Mikael Møller Høgsgaard \\
   PhD Student Aarhus University \\
   hogsgaard@cs.au.dk
-title: Mikael Høgsgaard
+title:  
 logo: Untitled.png
 show_downloads: false
 github: false
