--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ description: |
   Mikael Møller Høgsgaard \\
   PhD Student Aarhus University \\
   hogsgaard@cs.au.dk
-title:  <span style="color:black >Mikael Møller Høgsgaard </span>
+title:  <span style="color:black; background-color:white">l</span>
 logo: Untitled.png
 show_downloads: false
 github: false
