--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 description: |
-  Mikael Møller Høgsgaard <br />
+  Mikael M. Høgsgaard <br />
   PhD Student Aarhus University <br />
   hogsgaard@cs.au.dk
 title:  <span style="color:black; background-color:white">Mikael Møller Høgsgaard</span>
