--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 description: |
-  Mikael M. Høgsgaard <br />
+  Mikael Møller Høgsgaard <br />
   PhD Student Aarhus University <br />
   hogsgaard@cs.au.dk
-title:  <span style="color:black; background-color:white">Mikael Møller Høgsgaard</span>
+title:  <span style="color:black; background-color:white">Mikael M. Høgsgaard</span>
 logo: Untitled.png
 show_downloads: false
 github: false
