--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ description: |
   Mikael Møller Høgsgaard <br />
   PhD Student Aarhus University <br />
   hogsgaard@cs.au.dk
-title:  <span style="color:black; background-color:white">Mikael M. H.</span>
+# title:  <span style="color:black; background-color:white">Mikael M. Høgsgaard</span>
+title: <span style="font-size:15px;"><span style="color:black; background-color:white">Mikael Møller Høgsgaard</span></span>
 logo: Untitled.png
 show_downloads: false
 github: false
