--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,7 @@
 # theme: jekyll-theme-minimal
 
 description: |
-  Mikael Møller Høgsgaard <br />
-  PhD Student Aarhus University <br />
+  PhD Student Aarhus University 
   hogsgaard@cs.au.dk
 # title:  <span style="color:black; background-color:white">Mikael M. Høgsgaard</span>
 title: Mikael Møller Høgsgaard
