--- a/_config.yml
+++ b/_config.yml
@@ -15,4 +15,5 @@ description:
 title: Mikael Møller Høgsgaard
 show_downloads: false
 github: false
+logo: Untitled.png
 remote_theme: aterenin/minima-reboot
