--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # theme: jekyll-theme-minimal
 
 description: 
-  PhD Student Aarhus University \\
+  PhD Student Aarhus University 
   hogsgaard@cs.au.dk
 title: Mikael Møller Høgsgaard
 show_downloads: false
