--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,8 @@
 # github: false
 # theme: jekyll-theme-minimal
 
-description: 
-  PhD Student Aarhus University 
-  </b>
-  hogsgaard@cs.au.dk
+description: PhD Student Aarhus University 
+email: hogsgaard@cs.au.dk
 title: Mikael Møller Høgsgaard
 show_downloads: false
 github: false
